[gd_scene load_steps=23 format=3 uid="uid://bplst85m61ha6"]

[ext_resource type="Script" path="res://Levels/Scripts/Testing_Map.gd" id="1_f8w8w"]
[ext_resource type="PackedScene" uid="uid://cg4c04eu58hhh" path="res://Scenes/Player.tscn" id="2_7o2ro"]
[ext_resource type="Texture2D" uid="uid://sah4tegb5g8n" path="res://Assets/Backgrounds/backgroundColorGrass.png" id="3_d635d"]
[ext_resource type="Texture2D" uid="uid://ceck3a0kqqp7x" path="res://Assets/Tiles/Walls.png" id="4_0yfm5"]
[ext_resource type="PackedScene" uid="uid://d00wfnbbi84im" path="res://Scenes/Doors/Green_Door.tscn" id="5_gtscv"]
[ext_resource type="PackedScene" uid="uid://chawxhtxalls6" path="res://Scenes/Doors/Red_Door.tscn" id="6_w5h1v"]
[ext_resource type="PackedScene" uid="uid://csgantihcorb4" path="res://Scenes/Doors/Blue_Door.tscn" id="7_iph62"]
[ext_resource type="PackedScene" uid="uid://bht3dqry8rpk6" path="res://Scenes/Doors/Blue_Door_horz.tscn" id="8_oukkq"]
[ext_resource type="PackedScene" uid="uid://cayyj50ls5mth" path="res://Scenes/Doors/Green_Door_horz.tscn" id="9_ejj30"]
[ext_resource type="PackedScene" uid="uid://b2wcl34rhi3cg" path="res://Scenes/Doors/Red_Door_horz.tscn" id="10_v21k4"]
[ext_resource type="PackedScene" uid="uid://uu7nm8am4rpi" path="res://Scenes/Keys/Green_Key.tscn" id="11_w54ga"]
[ext_resource type="PackedScene" uid="uid://brimuifupmxek" path="res://Scenes/Keys/Blue_Key.tscn" id="12_q2crx"]
[ext_resource type="PackedScene" uid="uid://ckrrkj5wl6dgi" path="res://Scenes/Keys/Red_Key.tscn" id="13_4s3jn"]
[ext_resource type="PackedScene" uid="uid://bhqrxsiuvic58" path="res://Scenes/Weights/Weight_Light.tscn" id="14_ro8cc"]
[ext_resource type="PackedScene" uid="uid://com4rx88rrq34" path="res://Scenes/Weights/Weight_Medium.tscn" id="15_0gvjt"]
[ext_resource type="PackedScene" uid="uid://4jpexb7sjq7i" path="res://Scenes/Weights/Weight_Heavy.tscn" id="16_jh316"]
[ext_resource type="PackedScene" uid="uid://c7u6foxkgnq84" path="res://Scenes/Pressure_Plates/Pressure_Plate_Medium.tscn" id="17_me10m"]
[ext_resource type="PackedScene" uid="uid://bjd5dn0hict1x" path="res://Scenes/Pressure_Plates/Pressure_Plate_Light.tscn" id="18_25afh"]
[ext_resource type="PackedScene" uid="uid://2lj7hrriwj7e" path="res://Scenes/Pressure_Plates/Pressure_Plate_Heavy.tscn" id="19_qlbr1"]
[ext_resource type="PackedScene" uid="uid://b1vvhc03s3yxs" path="res://Scenes/Doors/Switch_Door.tscn" id="20_xiekr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aqu6j"]
texture = ExtResource("4_0yfm5")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_xwqug"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_aqu6j")

[node name="Controller" type="Node"]

[node name="Testing_Map" type="Node2D" parent="."]
z_index = -1
script = ExtResource("1_f8w8w")

[node name="Player" parent="Testing_Map" instance=ExtResource("2_7o2ro")]
y_sort_enabled = true
position = Vector2(340, 321)
scale = Vector2(2, 2)
collision_mask = 7

[node name="Camera2D" type="Camera2D" parent="Testing_Map/Player"]
position = Vector2(-0.5, 2)
scale = Vector2(0.5, 0.5)
position_smoothing_speed = 20.0
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Testing_Map"]
z_index = -5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -792.0
offset_top = -494.0
offset_right = 2897.0
offset_bottom = 2094.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_d635d")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="Testing_Map/TextureRect"]
texture_filter = 1
position = Vector2(792, 494)
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_xwqug")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 131072, 0, 2, 131072, 0, 3, 131072, 0, 4, 131072, 0, 5, 131072, 0, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 65536, 0, 10, 131072, 0, 11, 131072, 0, 12, 131072, 0, 13, 131072, 0, 14, 131072, 0, 15, 131072, 0, 16, 131072, 0, 17, 131072, 0, 18, 131072, 0, 19, 131072, 0, 20, 131072, 0, 21, 131072, 0, 22, 131072, 0, 23, 131072, 0, 24, 131072, 0, 25, 131072, 0, 26, 131072, 0, 27, 131072, 0, 28, 131072, 0, 29, 131072, 0, 30, 131072, 0, 31, 131072, 0, 32, 131072, 0, 33, 131072, 0, 34, 131072, 0, 35, 131072, 0, 36, 131072, 0, 37, 131072, 0, 38, 131072, 0, 39, 131072, 0, 40, 196608, 0, 65576, 0, 2, 131112, 0, 2, 196648, 0, 2, 262184, 0, 2, 327720, 0, 2, 393256, 0, 2, 393255, 0, 2, 458791, 0, 2, 524327, 0, 2, 589863, 0, 2, 655399, 0, 2, 720935, 0, 2, 720936, 0, 2, 655400, 0, 2, 589864, 0, 2, 524328, 0, 2, 458792, 0, 2, 786472, 0, 2, 852008, 0, 2, 917544, 0, 2, 983080, 0, 2, 1048616, 0, 2, 1114152, 0, 2, 1179688, 0, 2, 1245224, 0, 2, 1310760, 0, 2, 1376296, 0, 2, 1441832, 0, 2, 1507368, 0, 2, 1572904, 0, 2, 1638440, 0, 2, 1703976, 0, 2, 1835048, 0, 2, 1966120, 196608, 3, 1769512, 0, 2, 1900584, 0, 2, 1966119, 131072, 0, 1966118, 131072, 0, 1966117, 131072, 0, 1966116, 131072, 0, 1966115, 131072, 0, 1966114, 131072, 0, 1966113, 131072, 0, 1966112, 131072, 0, 1966111, 131072, 0, 1966110, 131072, 0, 1966109, 131072, 0, 1966108, 131072, 0, 1966107, 131072, 0, 1966106, 131072, 0, 1966105, 131072, 0, 1966104, 131072, 0, 1966103, 131072, 0, 1966102, 131072, 0, 1966101, 131072, 0, 1966100, 131072, 0, 1966099, 131072, 0, 1966098, 131072, 0, 1966097, 131072, 0, 1966096, 131072, 0, 1966095, 131072, 0, 1966094, 131072, 0, 1966093, 131072, 0, 1966089, 131072, 0, 1966088, 131072, 0, 1966087, 131072, 0, 1966086, 131072, 0, 1966085, 131072, 0, 1966084, 131072, 0, 1966083, 131072, 0, 1966082, 131072, 0, 1966090, 131072, 0, 1966091, 131072, 0, 1966092, 131072, 0, 65536, 0, 2, 196608, 0, 2, 262144, 0, 2, 327680, 0, 2, 393216, 0, 2, 458752, 0, 2, 524288, 0, 2, 589824, 0, 1, 655360, 0, 2, 720896, 0, 2, 786432, 0, 2, 851968, 0, 2, 917504, 0, 2, 983040, 0, 2, 1048576, 0, 2, 1114112, 0, 2, 1179648, 0, 2, 1245184, 0, 2, 1310720, 0, 2, 1376256, 0, 2, 1441792, 0, 2, 1507328, 0, 2, 1572864, 0, 2, 1638400, 0, 2, 1703936, 0, 2, 1769472, 0, 2, 1835008, 0, 2, 1900544, 0, 2, 1966080, 0, 3, 1966081, 131072, 0, 131072, 0, 2, 131075, 196608, 2, 196610, 131072, 3, 196611, 196608, 3, 131077, 196608, 2, 131079, 196608, 2, 196613, 65536, 2, 196615, 65536, 2, 327682, 131072, 3, 458754, 131072, 3, 589826, 131072, 0, 589825, 131072, 0, 589827, 131072, 0, 458755, 131072, 1, 327683, 131072, 1, 131081, 0, 2, 65545, 0, 2, 196617, 0, 2, 458761, 65536, 2, 393225, 0, 2, 327689, 0, 2, 262153, 0, 2, 589828, 131072, 0, 589829, 131072, 0, 589830, 131072, 0, 589831, 131072, 1, 589833, 131072, 2, 720904, 131072, 0, 720905, 131072, 0, 720906, 131072, 0, 720907, 65536, 1, 720903, 131072, 0, 720902, 131072, 0, 720901, 131072, 0, 720900, 131072, 0, 720899, 131072, 0, 720898, 131072, 3, 655371, 0, 2, 589835, 0, 2, 524299, 0, 2, 458763, 0, 2, 393227, 0, 2, 327691, 0, 2, 262155, 0, 2, 196619, 0, 2, 131083, 196608, 2, 720908, 131072, 1, 786443, 65536, 2)

[node name="Doors" type="Node" parent="Testing_Map"]

[node name="Green_Door" parent="Testing_Map/Doors" instance=ExtResource("5_gtscv")]
position = Vector2(145, 311)

[node name="Red_Door" parent="Testing_Map/Doors" instance=ExtResource("6_w5h1v")]
position = Vector2(143, 216)

[node name="Blue_Door" parent="Testing_Map/Doors" instance=ExtResource("7_iph62")]
position = Vector2(144, 408)

[node name="Blue_Door_Horz" parent="Testing_Map/Doors" instance=ExtResource("8_oukkq")]
position = Vector2(410, 142)

[node name="Green_Door_Horz" parent="Testing_Map/Doors" instance=ExtResource("9_ejj30")]
position = Vector2(312, 141)

[node name="Red_Door_Horz" parent="Testing_Map/Doors" instance=ExtResource("10_v21k4")]
position = Vector2(217, 143)

[node name="Keys" type="Node" parent="Testing_Map"]

[node name="Green_Key" parent="Testing_Map/Keys" instance=ExtResource("11_w54ga")]
position = Vector2(410, 287)

[node name="Blue_Key" parent="Testing_Map/Keys" instance=ExtResource("12_q2crx")]
position = Vector2(411, 249)

[node name="Red_Key" parent="Testing_Map/Keys" instance=ExtResource("13_4s3jn")]
position = Vector2(412, 334)

[node name="Weights" type="Node" parent="Testing_Map"]

[node name="Weight_Light" parent="Testing_Map/Weights" instance=ExtResource("14_ro8cc")]
position = Vector2(273, 270)

[node name="Weight_Medium" parent="Testing_Map/Weights" instance=ExtResource("15_0gvjt")]
position = Vector2(320, 269)

[node name="Weight_Heavy" parent="Testing_Map/Weights" instance=ExtResource("16_jh316")]
position = Vector2(263, 333)

[node name="Pressure_Plates" type="Node" parent="Testing_Map"]

[node name="Pressure_Plate_Medium_1" parent="Testing_Map/Pressure_Plates" instance=ExtResource("17_me10m")]
z_index = -2
position = Vector2(202, 408)

[node name="Pressure_Plate_Light_1" parent="Testing_Map/Pressure_Plates" instance=ExtResource("18_25afh")]
z_index = -2
position = Vector2(259, 406)

[node name="Pressure_Plate_Heavy_1" parent="Testing_Map/Pressure_Plates" instance=ExtResource("19_qlbr1")]
z_index = -2
position = Vector2(317, 401)

[node name="Switch_Doors" type="Node" parent="Testing_Map"]

[node name="Switch_Door_Light_1" parent="Testing_Map/Switch_Doors" instance=ExtResource("20_xiekr")]
position = Vector2(456, 408)
scale = Vector2(1.5, 1.8125)

[node name="Switch_Door_Med_1" parent="Testing_Map/Switch_Doors" instance=ExtResource("20_xiekr")]
position = Vector2(408.174, 455.857)
rotation = 1.5708
scale = Vector2(1.49108, 1.83333)

[node name="Switch_Door_Heavy_1" parent="Testing_Map/Switch_Doors" instance=ExtResource("20_xiekr")]
position = Vector2(121, 503.75)
scale = Vector2(1.5, 1.85938)

[node name="Switch_Door_Heavy_2" parent="Testing_Map/Switch_Doors" instance=ExtResource("20_xiekr")]
position = Vector2(504, 120)
rotation = 1.5708
scale = Vector2(1.5, 1.85938)
